02-Kubernetes/22-Ingress-App-Deployment/01-PathBased-Routing/02-PathBased-Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /tea(/|$)(.*)
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - pathType: Prefix
        path: /coffee(/|$)(.*)
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
---
